--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,53 +1,84 @@
 <html>
 <head>
-	<title>Twitter Network Analytic</title>
+	<title>TNA</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">
-		section{
-			background-color: red;
+		header{ 
+			background-color: #333333;
+			color: white;
+			text-align: center;
 		}
-		aside{
-			/*background-color: blue;*/
+		footer{
+			background-color: #333333;
+			color: white;
 		}
-		#canvas-force{
-			background-color: yellow;
+		main{
+			height: 50%;
 		}
 		canvas{
-			background-color: lime;
+			border-color: black;
+			border-style: solid;
+			border-width: 1px;
 		}
 	</style>
 </head>
 <body>
-	<div class="container">
+	<div class="fluid-container">
 		<header class="row">
-			<h3>Twitter Network Analytic</h3>
+			<div class="col-md-4">
+				<h3>Twitter Network Analytic</h3>
+			</div>
 		</header>
-		<main class="row">
-			<section class="col-md-8">
-				<div id="canvas-force"></div>
-			</section>
-			<aside class="col-md-4">
-				<p>Feature :</p>
-				<ul>
-					<li>Analyze Twitter User Graph by Mention</li>
-					<li>Analyze Twitter Topic by User Tweet</li>
-				</ul>
-			</aside>
+		<main class="container row">
+			<div class="col-md-10">
+				<div class="container">
+					<div id="canvas-force">
+
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="container">
+					<div class="row">
+						<div class="container">
+							<form class="form-inline">
+								<fieldset class="form-group">
+									<label class="sr-only">Analyze User</label>
+									<input type="text" class="form-control" placeholder="Enter Username (without @)">
+								</fieldset>
+								<button type="submit" class="btn btn-primary">Analyze User</button>
+							</form>
+						</div>
+					</div>
+					<div class="row">
+						<div class="container">
+							<form class="form-inline">
+								<fieldset class="form-group">
+									<label class="sr-only">Analyze User</label>
+									<input type="text" class="form-control" placeholder="Enter Topic Keyword">
+								</fieldset>
+								<button type="submit" class="btn btn-primary">Analyze Topic</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="row">
-			Copyright
+			<div class="col-md-12">
+				<div class="container">
+					Copyrights
+				</div>
+			</div>
 		</footer>
 	</div>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script>
-    // Figure width and height
-    var width = 400,
-        height = 300;
 
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script>
     // Number of Nodes
     var nNodes = 250,
         createLink = false;
@@ -76,6 +107,10 @@
             }
         }
     }
+
+    // Figure width and height
+    var width = 650,
+        height = 300;
 
     // Create and configure the force layout
     var force = d3.layout.force()
